# image-labeler

./: Cargo.toml  README.md
scripts/: build-windows.sh
src/: app.rs  db.rs  geometry.rs  image_data.rs  main.rs  schema.rs
