[package]
name = "image-labeler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
png = "0.17"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tiff = "0.9"
toml = "0.8"
